Fix auto scroll and item overflow issue

--- a/src/scss/modules/_dropdown-menu.scss
+++ b/src/scss/modules/_dropdown-menu.scss
@@ -30,6 +30,11 @@ $max-height: $vs-dropdown-max-height;
   text-align: left;
   list-style: none;
   background: $bg-color;
+
+  > div {
+    display: inline-flex;
+    flex-direction: column;
+  }
 }
 
 .vs__no-options {
